net worth board grid outline

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,3 +54,9 @@ html, body, #root {
 /* ====================================
    Layout
    ==================================== */
+/* .app {
+   background-color: lightblue;
+   height: 100vh;
+   width: 100vw;
+   border: 10px solid red;
+} */
